--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
+:root{
+  background-color: #ddffff;
+  padding: 0;
+  margin: 0;
+}
+
+.AppTitle {
+  color: rgb(92, 84, 84);
   text-align: center;
+  padding-top: 2rem;
+ 
+}
+.searchbox {
+	width: 400px;
+	height: 50px;
+	padding: 15px;
+	border: none;
+	outline: none;
+	background: none;
+	background-color: #EEE;
+	border-radius: 8px;
+	color: #53565A;
+	font-size: 20px;
+	font-weight: 300;
+	transition: 0.4s ease-out;
+}
+.searchbox:focus {
+	box-shadow: 0px 0px 8px 3px #4484C4;
+}
+.movie{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movie-app {
+	display: grid;
+	margin: 50px;
+	grid-template-columns: repeat(2,1fr);
+	grid-template-rows: repeat(2,1fr);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.movie-list {
+  color: rgb(200, 213, 214);
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.movies-add{
+	grid-column: 1/3;
+	display: grid;
+	grid-template-rows: repeat(2,1fr);
+}
+
+
+.filter{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: center;
+	margin: 30px;
+}
+
+.description {
+  max-width: 250px;
+  padding-left: 7.5rem;
+  font-size: larger;
+}
+.movieContent {
+  font-size: 2rem;
+  color: yellowgreen;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
-
-.App-link {
-  color: #61dafb;
+.card {
+  width: 500;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.btn{
+  background-image:linear-gradient(rgb(33, 20, 20),rgb(92, 84, 84));
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
